# Quant_Portfolio

./: README.md
Quant_Research/: .gitignore  README.md  environment.yml  pyproject.toml
Quant_Research/notebooks/: compare_runs.ipynb
Quant_Research/runs/: strat1_benchmark.yml  strat2_21d_5pct_fixed_50.yml  strat2_21d_5pct_prop_50.yml  strat3_peakdd_10pct_fixed_50.yml
Quant_Research/src/quant_backtest/: data.py  engine.py  metrics.py  portfolio.py
Quant_Research/src/quant_backtest/cli/: run_strategy.py
Quant_Research/src/quant_backtest/strategies/: base.py
Quant_Research/src/quant_backtest/strategies/dca/: peak_drawdown.py  rolling_drawdown.py  simple_dca.py
Simulating_Data_GBM/: gbm.py  gbm_visualisation.py  monte_carlo_sim.py  visualisation.ipynb
