[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quant_backtest"
version = "0.1.0"
description = "Research backtesting framework"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "pandas",
  "matplotlib",
  "scipy",
  "pyarrow",
  "yfinance",
  "pandas-datareader",
  "numpy-financial",
  "pyyaml",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]